<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023-2024 Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>19</version>
  </parent>

  <groupId>eu.maveniverse.maven.toolbox</groupId>
  <artifactId>toolbox</artifactId>
  <version>0.2.6-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Toolbox Maven Plugin and CLI in one.</description>

  <url>https://www.maveniverse.eu/toolbox</url>

  <licenses>
    <license>
      <name>EPL-2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0/</url>
    </license>
  </licenses>

  <modules>
    <module>shared</module>
    <module>toolbox</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/toolbox.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/toolbox.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/maveniverse/toolbox</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolbox/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolbox/actions</url>
  </ciManagement>

  <properties>
    <project.build.outputTimestamp>2024-09-04T14:07:15Z</project.build.outputTimestamp>

    <!--
    Build time: latest stable Maven and latest Java LTS.
    Run time: "not so old" Maven (3.6.3+) and latest Java LTS.
    -->
    <maven.compiler.release>21</maven.compiler.release>
    <requireBuildtimeJavaVersion.version>[21.0.3,)</requireBuildtimeJavaVersion.version>
    <requireBuildtimeMavenVersion.version>[3.9.9,)</requireBuildtimeMavenVersion.version>
    <requireRuntimeMavenVersion.version>[3.6.3,)</requireRuntimeMavenVersion.version>

    <!-- Dependency versions -->
    <version.mima>2.4.20</version.mima>
    <version.maven>3.9.9</version.maven>
    <version.resolver>1.9.22</version.resolver>
    <version.mavenIndexer>7.1.5</version.mavenIndexer>
    <version.mavenPluginTools>3.15.0</version.mavenPluginTools>
    <version.slf4j>2.0.16</version.slf4j>
    <version.picocli>4.7.6</version.picocli>
    <version.jline>3.26.3</version.jline>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.toolbox</groupId>
        <artifactId>shared</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.plugins</groupId>
        <artifactId>toolbox</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.plugins</groupId>
        <artifactId>toolbox</artifactId>
        <version>${project.version}</version>
        <classifier>cli</classifier>
      </dependency>

      <!-- Logging (except API, runtime only) -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${version.slf4j}</version>
      </dependency>

      <!-- MIMA -->
      <dependency>
        <groupId>eu.maveniverse.maven.mima</groupId>
        <artifactId>context</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>embedded-maven</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>standalone-static-uber</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.extensions</groupId>
        <artifactId>mmr</artifactId>
        <version>${version.mima}</version>
      </dependency>

      <!-- Resolver + Maven -->
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-api</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-util</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-artifact</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-builder-support</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-resolver-provider</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-repository-metadata</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${version.mavenPluginTools}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-utils</artifactId>
        <version>4.0.1</version>
      </dependency>

      <!-- Maven Indexer -->
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-api</artifactId>
        <version>${version.mavenIndexer}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-backend-remoterepository</artifactId>
        <version>${version.mavenIndexer}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-backend-smo</artifactId>
        <version>${version.mavenIndexer}</version>
      </dependency>

      <!-- Commons Compress (unpack) -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.27.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.17.0</version>
      </dependency>

      <!-- CLI -->
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli-codegen</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli-shell-jline3</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>${version.jline}</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jansi-core</artifactId>
        <version>${version.jline}</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.11.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${version.mavenPluginTools}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <version>${version.sisu}</version>
        <executions>
          <execution>
            <id>index-project</id>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.gaul</groupId>
        <artifactId>modernizer-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>modernizer</id>
            <goals>
              <goal>modernizer</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>run-its</id>
      <modules>
        <module>toolbox-plugin-its</module>
        <module>toolbox-cli-its</module>
      </modules>
    </profile>
  </profiles>
</project>
